--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
         <div class="formulario">
             <form action="index.html" method="get">
             <div class="row  form">
-              <div class="col-12">
+              <div class="col-12 sm-12">
                 <h3>Reserva alojamientos, hoteles y mucho más en Airbnb</h3>
             </div>
-            <div class="col-12">
+            <div class="col-12 sm-12">
                 <label for="donde" class="mb-3">DÓNDE</label><br>
                 <input type="text" placeholder="En cualquier lugar">
             </div>
             <div class="row">
-            <div class="col">
+            <div class="col sm-2">
                 <label for="" class="mb-3 mt-4">LLEGADA</label><br>
                 <input type="date" name="fecha" id="fechaL">
             </div>
-            <div class="col">
+            <div class="col sm-2">
                 <label for="" class="mb-3 mt-4">SALIDA</label><br>
                 <input type="date" name="fecha" id="fechaS">
             </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col sm-2">
                     <label for=""class="mb-3 mt-4 pl-4" >ADULTOS</label><br>
                     <input type="number" min=1 name="adulto" id="adulto" placeholder="1 adulto">
                 </div>
-                <div class="col">
+                <div class="col sm-2">
                     <label for="" class="mb-3 mt-4 pl-4">NIÑOS</label><br>
                     <input type="number" min=0 name="niño" id="niño" placeholder="0 niños">
                 </div><br>
